2010-07-26  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Fix feature detection regexp

        We were missing the last feature

        * Scripts/webkitdirs.pm:

2010-07-25  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein.

        WebKitTestRunner needs to support layoutTestController.dumpSelectionRect
        https://bugs.webkit.org/show_bug.cgi?id=42326

        * WebKitTestRunner/InjectedBundle/Bindings/LayoutTestController.idl:
        Added dumpSelectionRect.

        * WebKitTestRunner/InjectedBundle/LayoutTestController.h:
        (WTR::LayoutTestController::dumpSelectionRect): Added. For now, this
        does nothing because its purpose is to change pixel test output and
        we do not have pixel tests implemented yet.

2010-07-25  Darin Adler  <darin@apple.com>

        Reviewed by Maciej Stachowiak.

        WebKitTestRunner needs to support layoutTestController.keepWebHistory
        https://bugs.webkit.org/show_bug.cgi?id=42323

        Added keepWebHistory and computedStyleIncludingVisitedInfo.

        Also fixed misspellings of the word "receive".

        Also tweaked the names of some of the LayoutTestController members.

        * WebKitTestRunner/InjectedBundle/Bindings/CodeGeneratorTestRunner.pm:
        Added support for a type named "object" that is passed and returns as
        a JSValueRef.

        * WebKitTestRunner/InjectedBundle/Bindings/LayoutTestController.idl:
        Added keepWebHistory and computedStyleIncludingVisitedInfo. Also
        put setAcceptsEditing up nearer the top.

        * WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
        (WTR::InjectedBundle::_didReceiveMessage): Fixed mispellings of receive.
        (WTR::InjectedBundle::initialize): Ditto.
        (WTR::InjectedBundle::didReceiveMessage): Ditto.
        (WTR::InjectedBundle::reset): Reset the state of visited links between